# norns-mimir-agent

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mimir_agent/: config.py  db.py  discord_bot.py  eval.py  main.py  slack_bot.py  worker.py
mimir_agent/tools/: __init__.py  github.py  google_docs.py  memory.py  release_notes.py  web.py
tests/: test_db.py  test_eval.py  test_github.py  test_memory.py  test_web.py
