[project]
name = "mimir-agent"
version = "0.1.0"
description = "Product knowledge agent built on Norns durable runtime."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "norns-sdk",
    "anthropic>=0.40",
    "discord.py>=2.3",
    "PyGithub>=2.1",
    "google-api-python-client>=2.100",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
    "httpx>=0.27",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "slack-bolt>=1.18",
    "watchfiles>=1.0",  # dev: auto-restart on file changes
]

[project.scripts]
mimir-agent = "mimir_agent.main:main"
mimir-worker = "mimir_agent.worker:main"
mimir-discord = "mimir_agent.discord_bot:main"
mimir-slack = "mimir_agent.slack_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
norns-sdk = { path = "../norns-sdk-python", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
